Alignment fixes for add movie button

--- a/user-side/src/components/Header.css
+++ b/user-side/src/components/Header.css
@@ -42,6 +42,7 @@
 }
 .header .add-movie .add-symbol{
   font-size: 2em;
+  margin-bottom:0.25em;
 
 }
 
@@ -71,14 +72,6 @@ select{
     background: #0a1852;
     margin:auto auto auto 0.75em;
   }
-  .header .add-movie .add-symbol{
-    font-weight: bold;
-    font-weight: bold;
-    background: orange;
-    padding-left: 0.25em;
-    padding-right: 0.25em;
-    border-radius: 0.15em
- }
 }
 
 @media screen and (max-width: 768px) {
@@ -116,11 +109,21 @@ select{
   .header .add-movie .add-symbol{
     font-weight: bold;
     font-weight: bold;
+    font-size: xx-large;
+    margin-bottom: 10px;
     background: transparent;
     padding-left: 0.25em;
     padding-right: 0.25em;
     border-radius: 0.15em
  }
+ .header .add-movie:hover{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background: #0a1852 !important;
+}
+.header .add-movie:active{
+  box-shadow: none;
+  background: #0a1852 ;
+}
 }
 
 
